--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "utils/varibles";
 @import "base/base";
 @import "base/slick";
+@import "base/select2";
 @import "layout/hero";
 @import "layout/header";
 @import "layout/availablePrograms";
