--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "layout/mambership";
 @import "layout/overveiw";
 @import "layout/payment";
+@import "layout/contact";
 @import "layout/propose";
 @import "layout/price";
 @import "layout/review";
