add contact styles

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,11 +27,16 @@ img {
     cursor: pointer;
 }
 
-input{
+input, textarea{
     font: inherit;
     background: transparent;
     outline: none;
     border: none;
+
+    &::placeholder{
+        font: inherit;
+        color: inherit;
+    }
 }
 
 // main style
