--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -38,13 +38,12 @@
             font-size: 14px;
             line-height: 22px;
             letter-spacing: 0.07px;
-            margin-bottom: 8px;
 
             textarea {
                 max-width: 721px;
                 width: 100%;
                 height: 132px;
-                padding: 16px 0px 0px 16px;
+                padding: 16px;
                 border-radius: 24px;
                 border: 1px solid #E9EBED;
                 background: $bg-white;
@@ -52,6 +51,8 @@
                 font-size: 16px;
                 line-height: 24px;
                 letter-spacing: 0.08px;
+                margin-top: 8px;
+                resize: none;
             }
         }
 
@@ -65,6 +66,11 @@
             font-size: 16px;
             line-height: 24px;
             letter-spacing: 0.08px;
+            margin-top: 8px;
+
+            &:focus {
+                outline: none;
+            }
 
             &::placeholder {
                 font: inherit;
@@ -81,6 +87,7 @@
             border: none;
             line-height: 24px;
             letter-spacing: 0.08px;
+            margin-top: 24px;
         }
     }
 
@@ -92,6 +99,7 @@
         border-radius: 20px;
 
         span {
+            display: block;
             @include GeneralSans-Bold(18px, 26px, 600);
             letter-spacing: 0.09px;
             margin-bottom: 8px;
@@ -104,27 +112,27 @@
             margin-bottom: 32px;
         }
 
-        
+
         li {
 
-            padding: 6px 0px 16px 60px;
-            line-height: 27px;
+            padding: 12px 0px 12px 60px;
+            line-height: 24px;
             letter-spacing: 0.08px;
 
             &:not(:last-child) {
-                margin-bottom: 16px;
+                margin-bottom: 20px;
             }
         }
 
-        .phone{
+        .phone {
             background: url(../img/contact-phone.svg) no-repeat center left;
         }
 
-        .email{
+        .email {
             background: url(../img/contact-email.svg) no-repeat center left;
         }
 
-        .location{
+        .location {
             background: url(../img/contact-location.svg) no-repeat center left;
         }
     }
