--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "layout/overveiw";
 @import "layout/payment";
 @import "layout/contact";
+@import "layout/aboutus";
 @import "layout/propose";
 @import "layout/price";
 @import "layout/review";
