add aboutus styles

--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -192,7 +192,7 @@
         }
 
         &.diet {
-            background-image: url(../img/diet.svg);
+            background-image: url(../img/slim-waist.svg);
         }
 
         &.active {
