--- a/scss/layout/_aboutus.scss
+++ b/scss/layout/_aboutus.scss
@@ -1,4 +1,73 @@
-.aboutus {}
+.aboutus {
+
+    &-btn {
+        display: block;
+        width: 97px;
+        text-align: center;
+        padding: 8px;
+        border-radius: 20px;
+        border: 1px solid $color-ltgreen;
+        color: $color-ltgreen;
+        font-size: 14px;
+        line-height: 22px;
+        letter-spacing: 0.07px;
+        margin-bottom: 12px;
+        cursor: pointer;
+    }
+
+    &-wrapper {
+        display: flex;
+        justify-content: center;
+        gap: 183px;
+    }
+
+    &-title {
+        color: $color-white;
+        @include GeneralSans-Regular(72px, 80px, 400);
+        letter-spacing: 0.36px;
+
+        span {
+            color: $color-white;
+            font-size: 72px;
+            font-weight: 500;
+            line-height: 80px;
+            letter-spacing: 0.36px;
+        }
+    }
+
+    &-right {
+
+        span {
+            color: var(--additional-colors-white, #FFF);
+            font-family: General Sans;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 32px;
+            letter-spacing: 0.12px;
+        }
+
+        p {
+            color: var(--grayscale-20, #D1D1D6);
+            font-family: General Sans;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 26px;
+            letter-spacing: 0.09px;
+        }
+    }
+
+
+}
+
+.home {
+    background-color: $bg-blue;
+    background-image: url(../img/man2.png);
+    background-repeat: no-repeat;
+    background-position: right 50% top 105px;
+    padding-bottom: 98px;
+}
 
 .corework {
     background: $bg-section;
@@ -82,5 +151,59 @@
         font-size: 18px;
         line-height: 26px;
         letter-spacing: 0.09px;
+    }
+}
+
+.hero-indicate {
+    width: 308px;
+    position: relative;
+
+    @media (max-width: 768px) {
+        display: none;
+    }
+}
+
+.heart-rate {
+    width: 103px;
+    height: 116px;
+    background: #ffffff1f;
+    backdrop-filter: blur(10px);
+    border-radius: 12px;
+    font-weight: 400;
+    color: $color-secondary;
+    padding: 12px;
+
+    &-title {
+        @include GeneralSans-Regular(13px, 22px, 400);
+        margin: 40px 0 5px;
+        opacity: 0.8;
+        display: block;
+    }
+
+    &-number {
+        @include GeneralSans-Semibold(17px, 26px, 600);
+    }
+
+    &:first-child {
+        background-image: url(../img/video-square.svg);
+        background-repeat: no-repeat;
+        background-position: left 12px top 12px;
+        position: absolute;
+        right: 0;
+        top: 119px;
+    }
+
+    &:last-child {
+        background-image: url(../img/video-square.svg);
+        background-repeat: no-repeat;
+        background-position: left 10px top 10px;
+        position: absolute;
+        left: 0;
+        bottom: 8px;
+
+        @media (max-width: 980px) {
+            left: auto;
+            right: 0;
+        }
     }
 }
