--- a/scss/layout/_propose.scss
+++ b/scss/layout/_propose.scss
@@ -60,7 +60,7 @@
 
         .list {
             padding-bottom: 40px;
-            background: url(../img/Line.svg) no-repeat left bottom;
+            background: url(../img/line-item.svg) no-repeat left bottom;
             margin-bottom: 40px;
         }
 
