--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "layout/payment";
 @import "layout/contact";
 @import "layout/aboutus";
+@import "layout/aboutus-content";
 @import "layout/propose";
 @import "layout/price";
 @import "layout/review";
