--- a/scss/layout/_aboutus.scss
+++ b/scss/layout/_aboutus.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-position: bottom 0 center;
     padding: 79px 0 470px;
+    position: relative;
 
     &-btn {
         display: block;
@@ -61,6 +62,40 @@
         }
     }
 
+    .expiriences {
+        border-radius: 16px;
+        background: url(../img/icon-play.svg) no-repeat left 20px top 20px, linear-gradient(227deg, rgba(255, 255, 255, 0.24) 0%, rgba(255, 255, 255, 0.00) 100%);
+        box-shadow: 48px 48px 80px 0px rgba(8, 23, 45, 0.12);
+        backdrop-filter: blur(10px);
+        width: 213px;
+        padding: 20px 20px 20px 68px;
+        position: absolute;
+        bottom: 120px;
+        left: 25%;
+
+        &-list{
+            bottom: 357px;
+            left: auto;
+            right: 25%;
+        }
+
+        span {
+            display: block;
+            color: $color-white;
+        }
+
+        .title-number {
+            font-size: 32px;
+            line-height: 40px;
+            letter-spacing: 0.16px;
+            margin-bottom: 4px;
+        }
+
+        .expiriences-text {
+            @include GeneralSans-Regular(14px, 22px, 400);
+            letter-spacing: 0.07px;
+        }
+    }
+
 
 }
-
