--- a/scss/layout/_aboutus-content.scss
+++ b/scss/layout/_aboutus-content.scss
@@ -7,21 +7,25 @@
         color: $color-dark;
         font-size: 48px;
         line-height: 56px;
+        font-weight: 500;
         letter-spacing: 0.24px;
         margin-bottom: 16px;
     }
 
     &-text {
+        max-width: 512px;
+        width: 100%;
         text-align: center;
         @include GeneralSans-Regular(16px, 24px, 400);
         color: $color-grey;
         letter-spacing: 0.08px;
-        margin-bottom: 56px;
+        margin: 0 auto 56px;
     }
 
     .commitment-block {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 48px;
     }
 
@@ -29,6 +33,7 @@
         margin-top: 120px;
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         flex-direction: row-reverse;
         gap: 48px;
     }
@@ -37,6 +42,7 @@
         margin-top: 120px;
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 48px;
     }
 
