--- a/scss/layout/_aboutus.scss
+++ b/scss/layout/_aboutus.scss
@@ -1,10 +1,6 @@
 .aboutus {
     background-color: $bg-blue;
-    background-image: url(../img/man2.png);
-    background-repeat: no-repeat;
-    background-position: bottom 0 center;
-    padding: 79px 0 470px;
-    position: relative;
+    padding: 79px 0 0;
 
     &-btn {
         display: block;
@@ -23,10 +19,14 @@
 
     &-wrapper {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: flex-start;
-        flex-wrap: wrap;
-        gap: 183px;
+        gap: 50px;
+
+        @media (max-width: 1100px) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 
     &-title {
@@ -36,8 +36,13 @@
         @include GeneralSans-Regular(72px, 80px, 400);
         letter-spacing: 0.36px;
 
+        @media (max-width: 590px) {
+            font-size: 52px;
+            line-height: 60px;
+        }
+
         span {
-            @include GeneralSans-Medium(72px, 80px, 500);
+            @include GeneralSans-Medium(inherit, inherit, 500);
             letter-spacing: 0.36px;
         }
     }
@@ -62,6 +67,13 @@
         }
     }
 
+    &-img{
+        max-width: 580px;
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+    }
+
     .expiriences {
         border-radius: 16px;
         background: url(../img/icon-play.svg) no-repeat left 20px top 20px, linear-gradient(227deg, rgba(255, 255, 255, 0.24) 0%, rgba(255, 255, 255, 0.00) 100%);
@@ -71,12 +83,25 @@
         padding: 20px 20px 20px 68px;
         position: absolute;
         bottom: 120px;
-        left: 25%;
+        left: -50px;
+
+        @media (max-width: 768px) {
+            left: 0;
+        }
+
+        @media (max-width: 590px) {
+            display: none;
+        }
 
         &-list{
-            bottom: 357px;
+            top: 95px;
+            bottom: auto;
             left: auto;
-            right: 25%;
+            right: -30px;
+
+            @media (max-width: 768px) {
+                right: 0;
+            }
         }
 
         span {
