--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -3,9 +3,10 @@
 
     &-wrapper {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
         align-items: flex-start;
-        gap: 73px;
+        gap: 50px;
     }
 
     &-title {
@@ -14,8 +15,13 @@
         letter-spacing: 0.36px;
         margin-bottom: 16px;
 
+        @media (max-width: 590px) {
+            font-size: 52px;
+            line-height: 60px;
+        }
+
         span {
-            @include GeneralSans-Regular(72px, 80px, 400);
+            @include GeneralSans-Regular(inherit, inherit, 400);
             letter-spacing: 0.36px;
         }
     }
@@ -88,6 +94,11 @@
             line-height: 24px;
             letter-spacing: 0.08px;
             margin-top: 24px;
+
+            @media (max-width: 450px) {
+                align-self: center;
+                width: 100%;
+            }
         }
     }
 
